Don't use DirectCompositionSurfaceWin with passthrough command buffer

The passthrough command buffer doesn't yet support SetDrawRectangle.

Bug: 749309
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: If79279a8b278f0e39f04f710f42c0f1a27150169
Reviewed-on: https://chromium-review.googlesource.com/588005
Commit-Queue: John Bauman <jbauman@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490071}
Former-commit-id: 39210eaeceb4aaac746eca89a273c77a0e36c757